Added, modified and deleted builings
